# deepguard

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  docker-compose.yml  fast_server.py  main.py  pyproject.toml  requirements.txt  server.py  setup.bat  setup.sh
ShieldX/: README.md  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
ShieldX/app/: build.gradle.kts
ShieldX/app/src/main/: AndroidManifest.xml
ShieldX/app/src/main/res/color/: chip_background_selector.xml
ShieldX/app/src/main/res/drawable/: bg_fab_gradient.xml  card_primary_background.xml  card_success_background.xml  card_warning_background.xml  gradient_background.xml  ic_analytics.xml  ic_build.xml  ic_dashboard_modern.xml  ic_deepguard_logo.xml  ic_email.xml  ic_face.xml  ic_folder.xml  ic_home.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_lock.xml  ic_notification_modern.xml  ic_people.xml  ic_scan.xml  ic_scanner_modern.xml  ic_security_scan.xml  ic_settings.xml  ic_shield.xml  ic_shield_alert.xml  ic_shield_check.xml  ic_shield_warning.xml  ic_shieldx_logo.xml  ic_spam.xml  ic_user_secure.xml  ic_vibration.xml  status_indicator_danger.xml  status_indicator_safe.xml  status_indicator_warning.xml
src/: main.py
src/api/: mobile_routes.py  routes.py  schemas.py
src/core/: config.py  security.py
src/models/: deepfake.py  harassment.py
src/services/: detection.py  notification.py
src/utils/: forensic.py  logging.py  preprocessing.py
tests/: __init__.py  conftest.py  test_api.py  test_mobile_api.py  test_models.py
(+60 files in other folders)
